read all apis for user, posts working
user creation not working
